--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Helbiz</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/respo.css">
 </head>
 
 <body>
@@ -18,6 +19,7 @@
         <img class="img-logo" src="img/helbiz-logo.svg" alt="Helbiz">
       </div>
       <div class="navbar-col-right float w-70">
+        <a class="hamburger" href="#"></a>
         <ul class="menu-nav">
           <li>
             <a href="#">HelbizGo</a>
